--- a/app/app.html
+++ b/app/app.html
@@ -12,17 +12,22 @@
   	<button class="btn btn-default" href="#when" role="button">When</button>
   	<button class="btn btn-default" href="#how" role="button">How</button>
   	<button class="btn btn-default" href="#what" role="button">Who</button>
-  	<button class="btn btn-default" href="#why" role="button">Why</button>
+  	<button class="btn btn-default" href="#why" role="button">Where</button>
   	<button class="btn btn-default" href="#share" role="button">Share</button>
 
   	<div>
   		<h2>When to Vote</h2>
+  		<p>First Time Registration Deadline: Monday, April 18, 2016</p>
+  		<p>Kentucky Primary Election: Tuesday, May 17, 2016</p>
   	</div>
 
   	<div>
   		<h2>How to Vote</h2>
   		<!-- https://vrsws.sos.ky.gov/ovrweb/  -->
-  		<button class="btn btn-default" href="https://vrsws.sos.ky.gov/ovrweb/" target="_blank" role="button">Online Voter Registration</button>
+  		<p>You must be a registered Democrat to vote in the 2016 Kentucky Primary Election!</p>
+  		<button class="btn btn-default" href="https://vrsws.sos.ky.gov/vic/" target="_blank" role="button">Am I a Registered Democrat?</button>
+  		<p>First time registering?  Register by April 18, 2016 in order to vote!</p>
+  		<button class="btn btn-default" href="https://vrsws.sos.ky.gov/ovrweb/" target="_blank" role="button">First Time Voter Registration</button>
   		<!-- http://ags2.lojic.org/WhereDoIVote/-->
   		<button class="btn btn-default" href="http://ags2.lojic.org/WhereDoIVote/" target="_blank" role="button">Where do I vote?</button>
 
@@ -30,14 +35,30 @@
 
   	<div>
   		<h2>Who is Running</h2>
+  		<ul class="presidential">
+  			<li><a href="https://www.hillaryclinton.com/">Hillary Clinton</a></li>
+  			<li><a href="https://berniesanders.com/?nosplash=true/">Bernie Sanders</a></li>
+  			<li><a href="https://martinomalley.com/">Martin O'Malley</a></li>
+  			<li><a href="https://rocky2016.com">Roque De La Fuente</a></li>
+  		</ul>
+  		<ul class="us-senate">
+  			<li><a href="https://www.hillaryclinton.com/">Hillary Clinton</a></li>
+  			<li><a href="https://berniesanders.com/?nosplash=true/">Bernie Sanders</a></li>
+  			<li><a href="https://martinomalley.com/">Martin O'Malley</a></li>
+  			<li><a href="https://rocky2016.com">Roque De La Fuente</a></li>
+  		</ul>
+
   	</div>
 
   	<div>
-  		<h2>Why to Vote</h2>
+  		<h2>Where Do I Vote?</h2>
+  		<button class="btn btn-default" href="" target="_blank" role="button">Where Do I Vote?</button>
   	</div>  	
 
   	<div>
   		<h2>Share</h2>
+  		<button class="btn btn-default" href="#" target="_blank" role="button">Facebook</button>
+  		<button class="btn btn-default" href="#" target="_blank" role="button">Twitter</button>
   	</div>    	
 
 
