--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html>
 <head>
   <title>app</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link href="app/styles.css" rel="stylesheet" media="screen">
 </head>
 
 <body>
 
 
   <h1>kyprimary.com</h1>
-
-  {{> hello}}
 
   	<button class="btn btn-default" href="#when" role="button">When</button>
   	<button class="btn btn-default" href="#how" role="button">How</button>
