Cleaned up ul and li elements, added to CSS style

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 
-  <h1>kyprimary.com</h1>
+  <h1>Kentucky Primary</h1>
 
   	<a class="btn btn-default" href="#when" role="button">When</a>
   	<a class="btn btn-default" href="#how" role="button">How</a>
@@ -16,27 +16,36 @@
   	<a class="btn btn-default" href="#where" role="button">Where</a>
   	<a class="btn btn-default" href="#share" role="button">Share</a>
 
-  	<div>
+  	<div class="section-title">
   		<a name="when"></a>
   		<h2>Important Dates</h2>
-  		<p>First Time Registration Deadline:</p>
-  		<p class="date">Monday, April 18, 2016</p>
-  		<p>Kentucky Primary Election:</p>
-  		<p class="date">Tuesday, May 17, 2016</p>
+  		<div class="content-block">
+  			<p>First Time Registration Deadline:</p>
+  			<p class="date">Monday, April 18, 2016</p>
+  		</div>
+  		<div class="content-block">
+  			<p>Kentucky Primary Election:</p>
+  			<p class="date">Tuesday, May 17, 2016</p>
+  		</div>
   	</div>
 
-  	<div>
+  	<div class="section-title">
   		<a name="how"></a>
+
   		<h2>How to Register</h2>
-  		<!-- https://vrsws.sos.ky.gov/ovrweb/  -->
-  		<p>You must be a registered Democrat to vote in the 2016 Kentucky Primary Election!</p>
-  		<a class="btn btn-default" href="https://vrsws.sos.ky.gov/vic/" target="_blank" role="button">Am I a Registered Democrat?</a>
-  		<p>First time registering?  Register by April 18, 2016 in order to vote!</p>
-  		<a class="btn btn-default" href="https://vrsws.sos.ky.gov/ovrweb/" target="_blank" role="button">First Time Voter Registration</a>
+  		<div class="content-block">
+
+  			<p>You must be a registered Democrat to vote in the 2016 Kentucky Primary Election!</p>
+  			<a class="btn btn-default" href="https://vrsws.sos.ky.gov/vic/" target="_blank" role="button">Am I a Registered Democrat?</a>
+  		</div>
+  		<div class="content-block">
+  			<p>First time registering?  Register by April 18, 2016 in order to vote!</p>
+  			<a class="btn btn-default" href="https://vrsws.sos.ky.gov/ovrweb/" target="_blank" role="button">First Time Voter Registration</a>
+  		</div>
 
   	</div>
 
-  	<div>
+  	<div class="section-title">
   		<a name="who"></a>
   		<h2>Who is Running</h2>
   		<h3>Presidential</h3>
@@ -77,13 +86,13 @@
 
   	</div>
 
-  	<div>
+  	<div class="section-title">
   		<a name="where"></a>
   		<h2>Where Do I Vote?</h2>
   		<a class="btn btn-default" href="https://vrsws.sos.ky.gov/vic/" target="_blank" role="button">Where Do I Vote?</a>
   	</div>  	
 
-  	<div>
+  	<div class="section-title">
   		<a name="share"></a>
   		<h2>Share</h2>
 
