More styling stuff

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 
-  <h1>Kentucky Primary</h1>
+	<div class="header">
+  		<h1>Kentucky Primary</h1>
 
-  	<a class="btn btn-default" href="#when" role="button">When</a>
-  	<a class="btn btn-default" href="#how" role="button">How</a>
-  	<a class="btn btn-default" href="#who" role="button">Who</a>
-  	<a class="btn btn-default" href="#where" role="button">Where</a>
-  	<a class="btn btn-default" href="#share" role="button">Share</a>
+	  	<a class="btn btn-default btn-xlarge" href="#when" role="button">When</a>
+	  	<a class="btn btn-default btn-xlarge" href="#how" role="button">How</a>
+	  	<a class="btn btn-default btn-xlarge" href="#who" role="button">Who</a>
+	  	<a class="btn btn-default btn-xlarge" href="#where" role="button">Where</a>
+	  	<a class="btn btn-default btn-xlarge" href="#share" role="button">Share</a>
+  	</div>
 
   	<div class="section-title">
   		<a name="when"></a>
@@ -36,11 +38,11 @@
   		<div class="content-block">
 
   			<p>You must be a registered Democrat to vote in the 2016 Kentucky Primary Election!</p>
-  			<a class="btn btn-default" href="https://vrsws.sos.ky.gov/vic/" target="_blank" role="button">Am I a Registered Democrat?</a>
+  			<a class="btn btn-default btn-xlarge" href="https://vrsws.sos.ky.gov/vic/" target="_blank" role="button">Am I a Registered Democrat?</a>
   		</div>
   		<div class="content-block">
   			<p>First time registering?  Register by April 18, 2016 in order to vote!</p>
-  			<a class="btn btn-default" href="https://vrsws.sos.ky.gov/ovrweb/" target="_blank" role="button">First Time Voter Registration</a>
+  			<a class="btn btn-default btn-xlarge" href="https://vrsws.sos.ky.gov/ovrweb/" target="_blank" role="button">First Time Voter Registration</a>
   		</div>
 
   	</div>
@@ -48,56 +50,66 @@
   	<div class="section-title">
   		<a name="who"></a>
   		<h2>Who is Running</h2>
-  		<h3>Presidential</h3>
-  		<ul class="presidential">
-  			<li><a href="https://www.hillaryclinton.com/" target="_blank">Hillary Clinton</a></li>
-  			<li><a href="https://berniesanders.com/?nosplash=true/" target="_blank">Bernie Sanders</a></li>
-  			<li><a href="https://martinomalley.com/" target="_blank">Martin O'Malley</a></li>
-  			<li><a href="https://rocky2016.com" target="_blank">Roque De La Fuente</a></li>
-  		</ul>
-  		<h3>U.S. Senate</h3>
-  		<ul class="us-senate">
-  			<li><a href="#" target="_blank">US Senate Candidate #1</a></li>
-  			<li><a href="#" target="_blank">US Senate Candidate #2</a></li>
-  			<li><a href="#" target="_blank">US Senate Candidate #3</a></li>
-  			<li><a href="#" target="_blank">US Senate Candidate #4</a></li>
-  		</ul>
-  		<h3>U.S. House</h3>
-  		<ul class="us-house">
-  			<li><a href="#" target="_blank">US House Candidate #1</a></li>
-  			<li><a href="#" target="_blank">US House Candidate #2</a></li>
-  			<li><a href="#" target="_blank">US House Candidate #3</a></li>
-  			<li><a href="#" target="_blank">US House Candidate #4</a></li>
-  		</ul>
-  		<h3>Kentucky State Senate</h3>
-  		<ul class="ky-senate">
-  			<li><a href="#" target="_blank">KY Senate Candidate #1</a></li>
-  			<li><a href="#" target="_blank">KY Senate Candidate #2</a></li>
-  			<li><a href="#" target="_blank">KY Senate Candidate #3</a></li>
-  			<li><a href="#" target="_blank">KY Senate Candidate #4</a></li>
-  		</ul>
-  		<h3>Kentucky State House</h3>
-  		<ul class="ky-house">
-  			<li><a href="#" target="_blank">KY House Candidate #1</a></li>
-  			<li><a href="#" target="_blank">KY House Candidate #2</a></li>
-  			<li><a href="#" target="_blank">KY House Candidate #3</a></li>
-  			<li><a href="#" target="_blank">KY House Candidate #4</a></li>
-  		</ul>  		
+  		<div class="candidates">
+	  		<h3>Presidential</h3>
+	  		<ul class="presidential">
+	  			<li><a href="https://www.hillaryclinton.com/" target="_blank">Hillary Clinton</a></li>
+	  			<li><a href="https://berniesanders.com/?nosplash=true/" target="_blank">Bernie Sanders</a></li>
+	  			<li><a href="https://martinomalley.com/" target="_blank">Martin O'Malley</a></li>
+	  			<li><a href="https://rocky2016.com" target="_blank">Roque De La Fuente</a></li>
+	  		</ul>
+  		</div>
+  		<div class="candidates">
+	  		<h3>U.S. Senate</h3>
+	  		<ul class="us-senate">
+	  			<li><a href="#" target="_blank">US Senate Candidate #1</a></li>
+	  			<li><a href="#" target="_blank">US Senate Candidate #2</a></li>
+	  			<li><a href="#" target="_blank">US Senate Candidate #3</a></li>
+	  			<li><a href="#" target="_blank">US Senate Candidate #4</a></li>
+	  		</ul>
+	  	</div>
+	  	<div class="candidates">
+	  		<h3>U.S. House</h3>
+	  		<ul class="us-house">
+	  			<li><a href="#" target="_blank">US House Candidate #1</a></li>
+	  			<li><a href="#" target="_blank">US House Candidate #2</a></li>
+	  			<li><a href="#" target="_blank">US House Candidate #3</a></li>
+	  			<li><a href="#" target="_blank">US House Candidate #4</a></li>
+	  		</ul>
+  		</div>
+  		<div class="candidates">
+	  		<h3>Kentucky State Senate</h3>
+	  		<ul class="ky-senate">
+	  			<li><a href="#" target="_blank">KY Senate Candidate #1</a></li>
+	  			<li><a href="#" target="_blank">KY Senate Candidate #2</a></li>
+	  			<li><a href="#" target="_blank">KY Senate Candidate #3</a></li>
+	  			<li><a href="#" target="_blank">KY Senate Candidate #4</a></li>
+	  		</ul>
+  		</div>
+  		<div class="candidates">
+	  		<h3>Kentucky State House</h3>
+	  		<ul class="ky-house">
+	  			<li><a href="#" target="_blank">KY House Candidate #1</a></li>
+	  			<li><a href="#" target="_blank">KY House Candidate #2</a></li>
+	  			<li><a href="#" target="_blank">KY House Candidate #3</a></li>
+	  			<li><a href="#" target="_blank">KY House Candidate #4</a></li>
+	  		</ul> 	
+  		</div>	
 
   	</div>
 
   	<div class="section-title">
   		<a name="where"></a>
   		<h2>Where Do I Vote?</h2>
-  		<a class="btn btn-default" href="https://vrsws.sos.ky.gov/vic/" target="_blank" role="button">Where Do I Vote?</a>
+  		<a class="btn btn-default btn-xlarge" href="https://vrsws.sos.ky.gov/vic/" target="_blank" role="button">Where Do I Vote?</a>
   	</div>  	
 
   	<div class="section-title">
   		<a name="share"></a>
   		<h2>Share</h2>
 
-  		<a class="btn btn-default" href="#" target="_blank" role="button">Facebook</a>
-  		<a class="btn btn-default" href="#" target="_blank" role="button">Twitter</a>
+  		<a class="btn btn-default btn-xlarge" href="#" target="_blank" role="button">Facebook</a>
+  		<a class="btn btn-default btn-xlarge" href="#" target="_blank" role="button">Twitter</a>
   	</div>    	
   	
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
