Final push for CodeAcross

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
   		<div class="candidates">
 	  		<h3>Presidential</h3>
 	  		<ul class="presidential">
-	  			<li><a href="https://www.hillaryclinton.com/" target="_blank">Hillary Clinton</a></li>
-	  			<li><a href="https://berniesanders.com/?nosplash=true/" target="_blank">Bernie Sanders</a></li>
+	  			<li><img src="img/HillaryClinton.png"><a href="https://www.hillaryclinton.com/" target="_blank">Hillary Clinton</a></li>
+	  			<li><img src="img/BernieSanders.png"><a href="https://berniesanders.com/?nosplash=true/" target="_blank">Bernie Sanders</a></li>
 	  			<li><a href="https://martinomalley.com/" target="_blank">Martin O'Malley</a></li>
 	  			<li><a href="https://rocky2016.com" target="_blank">Roque De La Fuente</a></li>
 	  		</ul>
