changed fonts out, added flexbox feature

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>app</title>
+  <title>Democrat Voting App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -9,6 +9,9 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
     <link href="css/styles.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="css/animations.css">
+    <link href='https://fonts.googleapis.com/css?family=Rozha+One|Raleway:400,100,800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=' rel='stylesheet' type='text/css'>
+  
 </head>
 
 <body>	
@@ -182,20 +185,26 @@
             c-0.00012,5.03003-0.00012,10.06006-0.00002,15.09009L77.41101,75.22778z"/>
     </g>
    </svg>
-  </div>
+ 
 
+    
+      <div class ="headerimg item">
+        <img src = "img/votenow.svg" alt ="Vote Now sign with hands">
+      </div>
+    </div>
     <div class="header item">
   		<h1>Kentucky Primary</h1>
-
+      <div class ="item">
 	  	<a class="btn btn-default btn-xlarge item" href="#when" role="button">When</a>
 	  	<a class="btn btn-default btn-xlarge" href="#how" role="button">How</a>
 	  	<a class="btn btn-default btn-xlarge" href="#who" role="button">Who</a>
 	  	<a class="btn btn-default btn-xlarge" href="#where" role="button">Where</a>
 	  	<a class="btn btn-default btn-xlarge" href="#share" role="button">Share</a>
   	</div>
+  </div>  
 </div>
-  <hr class ="shade">
-<div class= "flex-container">
+  <hr class ="double">
+    
   	<div class="section-title item">
   		<a name="when"></a>
   		<h2>Important Dates</h2>
@@ -290,7 +299,7 @@
   		<a class="btn btn-default btn-xlarge" href="#" target="_blank" role="button">Facebook</a>
   		<a class="btn btn-default btn-xlarge" href="#" target="_blank" role="button">Twitter</a>
   	</div>    	
-  	</div>
+  
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   	<script type="text/javascript" src="app.js"></script>
 
