more color and spacing stylings

--- a/index.html
+++ b/index.html
@@ -203,9 +203,8 @@
   	</div>
   </div>  
 </div>
-  <hr class ="double">
     
-  	<div class="section-title item">
+  	<div class="section-title contentblue item">
   		<a name="when"></a>
   		<h2>Important Dates</h2>
   		<div class="content-block item">
@@ -217,22 +216,20 @@
   			<p class="date">Tuesday, May 17, 2016</p>
   		</div>
   	</div>
-    </div>
-
-  	<div class="section-title">
+<div class= "flex-container">
+  	<div class="section-title contentred item">
   		<a name="how"></a>
-    <hr class ="dotted">
   		<h2>How to Register</h2>
-  		<div class="content-block">
-  			<p>You must be a registered Democrat to vote in the 2016 Kentucky Primary Election!</p>
-  			<a class="btn btn-default btn-xlarge" href="https://vrsws.sos.ky.gov/vic/" target="_blank" role="button">Am I a Registered Democrat?</a>
+  		<div class="content-block item">
+  			<div><p2>You must be a registered Democrat to vote in the 2016 Kentucky Primary Election!</p2></div>
+  			<a class="btn btn-default btn-xlargebl item" href="https://vrsws.sos.ky.gov/vic/" target="_blank" role="button">Am I a Registered Democrat?</a>
   		</div>
-  		<div class="content-block">
-  			<p>First time registering?  Register by April 18, 2016 in order to vote!</p>
-  			<a class="btn btn-default btn-xlarge" href="https://vrsws.sos.ky.gov/ovrweb/" target="_blank" role="button">First Time Voter Registration</a>
+  		<div class="content-block item">
+  			<div><p2>First time registering?  Register by April 18, 2016 in order to vote!</p2></div>
+  			<a class="btn btn-default btn-xlargebl" href="https://vrsws.sos.ky.gov/ovrweb/" target="_blank" role="button">First Time Voter Registration</a>
   		</div>
   	</div>
-
+  </div>
   	<div class="section-title">
   		<a name="who"></a>
       <hr class ="dotted">
@@ -298,7 +295,8 @@
 
   		<a class="btn btn-default btn-xlarge" href="#" target="_blank" role="button">Facebook</a>
   		<a class="btn btn-default btn-xlarge" href="#" target="_blank" role="button">Twitter</a>
-  	</div>    	
+  	</div>  
+  </div>
   
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   	<script type="text/javascript" src="app.js"></script>
