--- a/index.html
+++ b/index.html
@@ -313,6 +313,39 @@
       <div>
   		<a class="btn btn-default btn-xlarge item" href="https://vrsws.sos.ky.gov/vic/" target="_blank" role="button">Where Do I Vote?</a>
   	 </div>
+      <div class="map">
+        <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
+        <script src="http://d3js.org/topojson.v1.min.js"></script>
+          <script>
+          var width = 960,
+              height = 500;
+
+          var projection = d3.geo.mercator()
+              .center([0, 5 ])
+              .scale(900)
+              .rotate([-180,0]);
+
+          var svg = d3.select("body").append("svg")
+              .attr("width", width)
+              .attr("height", height);
+
+          var path = d3.geo.path()
+              .projection(projection);
+
+          var g = svg.append("g");
+
+          // load and display the World
+          d3.json("json/world-110m2.json", function(error, topology) {
+              g.selectAll("path")
+                .data(topojson.object(topology, topology.objects.countries)
+                    .geometries)
+              .enter()
+                .append("path")
+                .attr("d", path)
+          });
+
+          </script>
+      </div>
       <div class="section-title item2">
   		<a name="share"></a>
   		<h2>Share</h2>
