Added Bootstrap JS collapse section under US Senate and US House pulling from JSON files YAYYYYY

--- a/index.html
+++ b/index.html
@@ -264,14 +264,16 @@
           </div>
         </div>              
       </div>
+      <div class="us-senate">
+          <h3>U.S. Senate Candidates</h3>
 
-      <h3>U.S. Senate Candidates</h3>
+          <a class="btn btn-default btn-xlarge" role="button" data-toggle="collapse" href="#collapse-senate" aria-expanded="false" aria-controls="collapse">View</a>
+      </div>
+      <div class="us-house">
+          <h3>U.S. House of Representatives Candidates</h3>
 
-      <a class="btn btn-default btn-xlarge" href="#" target="_blank" role="button">View</a>
-
-      <h3>U.S. House of Representatives Candidates</h3>
-
-      <a class="btn btn-default btn-xlarge" href="#" target="_blank" role="button">View</a>
+          <a class="btn btn-default btn-xlarge" role="button" data-toggle="collapse" href="#collapse-house" aria-expanded="false" aria-controls="collapse">View</a>
+      </div>
 
       <h3>Kentucky Senate Candidates</h3>
 
@@ -300,6 +302,8 @@
     </div>
  
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
 
 </body>
 
