Finished the collapse features for the US Senate and US House candidates.

--- a/index.html
+++ b/index.html
@@ -209,10 +209,19 @@
   			<p>First Time Registration Deadline:</p>
   			<p class="date">Monday, April 18, 2016</p>
   		</div>
+        <div class="content-block item">
+            <p>Absentee Ballot Request:</p>
+            <p class="date">Tuesday, May 10, 2016</p>
+        </div>
+    <div class="content-block item">
+            <p>Absentee Ballot Return:</p>
+            <p class="date">Tuesday, May 17, 2016 by 6:00 pm</p>
+        </div>        
   		<div class="content-block item">
   			<p>Kentucky Primary Election:</p>
   			<p class="date">Tuesday, May 17, 2016</p>
   		</div>
+
   	</div>
   </div>
   <div class= "flex-container">
@@ -227,6 +236,14 @@
   			<div><p2>First time registering?  Register by April 18, 2016 in order to vote!</p2></div>
   			<a class="btn btn-default btn-xlargebl" href="https://vrsws.sos.ky.gov/ovrweb/" target="_blank" role="button">First Time Voter Registration</a>
   		</div>
+        <div class="content-block item">
+            <div><p2>Serving in the military or living outside of the United States?</p2></div>
+            <a class="btn btn-default btn-xlargebl" href="http://elect.ky.gov/voterinfo/militaryandoverseasvoters/Pages/VoterToolkit.aspx" target="_blank" role="button">Who Can Cast an Absentee Ballot?</a>
+        </div>
+        <div class="content-block item">
+            <div><p2>If you qualify, request an absentee ballot no later than Tuesday, May 10, 2016!  Return it no later than Tuesday, May 17, 2016 by 6:00pm!</p2></div>
+            <a class="btn btn-default btn-xlargebl" href="http://elect.ky.gov/voterinfo/militaryandoverseasvoters/Pages/FPCARegistertovote.aspx" target="_blank" role="button">Request an Absentee Ballot</a>
+        </div>
   	</div>
   </div>
     <div id="container-fluid">
