--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
 
   <div class= "flex-container">
     <div class ="svglogo item">
- 
-      <div class ="headerimg item">
-        <img src = "img/votenow.svg" alt ="Vote Now sign with hands">
+     <div class ="headerimg item">
+        <img src = "img/votenow.png" alt ="Vote Now sign with hands">
       </div>
-    </div>
+      
       <div class="header item">
       <h1>Kentucky Primary</h1>
       <div class ="item">
@@ -32,33 +31,12 @@
 	  	<a class="btn btn-default btn-xlarge" href="#where" role="button">Where</a>
 	  	<a class="btn btn-default btn-xlarge" href="#share" role="button">Share</a>
   	 </div>
-    </div>  
+    </div> 
   </div>
+    </div> 
   <div class="flex-container">
-  	<div class="section-title item">
-  		<a name="when"></a>
-  		<h2>Important Dates</h2>
-  		<div class="content-block item">
-  			<p>First Time Registration Deadline:</p>
-  			<p class="date">Monday, April 18, 2016</p>
-  		</div>
-        <div class="content-block item">
-            <p>Absentee Ballot Request:</p>
-            <p class="date">Tuesday, May 10, 2016</p>
-        </div>
-    <div class="content-block item">
-            <p>Absentee Ballot Return:</p>
-            <p class="date">Tuesday, May 17, 2016 by 6:00 pm</p>
-        </div>        
-  		<div class="content-block item">
-  			<p>Kentucky Primary Election:</p>
-  			<p class="date">Tuesday, May 17, 2016</p>
-  		</div>
-
-  	</div>
-  
-  
-  	<div class="section-title contentred item">
+  	
+    <div class="section-title contentred item3">
   		<a name="how"></a>
   		<h3>How to Register</h3>
        <div class="item panel-group" id="accordion">
@@ -70,7 +48,7 @@
             </div>
             <div id="collapseOne" class="panel-collapse collapse in">
                 <div class="item panel-body">
-                    <p>You must be a registered Democrat to vote in the 2016 Kentucky Primary Election! <a href="https://vrsws.sos.ky.gov/vic/" target="_blank">Check Registration Status</a></p>
+                    <p>You must be a registered Democrat to vote in the 2016 Kentucky Primary Election!</p><p> <a href="https://vrsws.sos.ky.gov/vic/" target="_blank">Check Registration Status</a></p>
                 </div>
             </div>
         </div>
@@ -106,15 +84,36 @@
             </div>
             <div id="collapseFour" class="panel-collapse collapse">
                 <div class="panel-body">
-                    <p>If you qualify, request an absentee ballot no later than Tuesday, May 10, 2016!  Return it no later than Tuesday, May 17, 2016 by 6:00pm!</p><p><a href="http://elect.ky.gov/voterinfo/militaryandoverseasvoters/Pages/FPCARegistertovote.aspx" target="_blank">Request an Absentee Ballot</a></p>
+                    <p>If you qualify, request an absentee ballot no later than Tuesday, May 10, 2016!</p><p>Return it no later than Tuesday, May 17, 2016 by 6:00pm!</p><p><a href="http://elect.ky.gov/voterinfo/militaryandoverseasvoters/Pages/FPCARegistertovote.aspx" target="_blank">Request an Absentee Ballot</a></p>
                 </div>
             </div>
         </div>
     </div>
-	<p2><strong>Note:</strong> Click on the linked heading text to expand or collapse accordion panels. AND DON'T FORGET TO VOTE!</p2>
+	<p2><strong>Note:</strong> Click on the linked heading text to expand or collapse accordion panels.</p2>
 
   		
-  </div>	
+  </div>
+    <div class="section-title item2">
+  		<a name="when"></a>
+  		<h2>Important Dates</h2>
+  		<div class="item">
+  			<p>First Time Registration Deadline:</p>
+  			<p class="date">Monday, April 18, 2016</p>
+  		</div>
+        <div class="item">
+            <p>Absentee Ballot Request:</p>
+            <p class="date">Tuesday, May 10, 2016</p>
+        </div>
+    <div class="item">
+            <p>Absentee Ballot Return:</p>
+            <p class="date">Tuesday, May 17, 2016 by 6:00 pm</p>
+        </div>        
+  		<div class="item">
+  			<p>Kentucky Primary Election:</p>
+  			<p class="date">Tuesday, May 17, 2016</p>
+  		</div>
+
+  	</div>
     </div>
     <div id="container-fluid">
   	
@@ -151,28 +150,23 @@
           </div>
         </div>              
       </div>
-      <div class="us-senate">
-          <h3>U.S. Senate Candidates</h3>
+    </div> 
+    <div class="flex-container">
+    <div class="us-senate item">
+      <a class="btn btn-default btn-xlarge" role="button" data-toggle="collapse" href="#collapse-senate" aria-expanded="false" aria-controls="collapse">USA Senate Candidates</a>
+    </div>
+    <div class="us-house item">
+      <a class="btn btn-default btn-xlarge" role="button" data-toggle="collapse" href="#collapse-house" aria-expanded="false" aria-controls="collapse">USA House Candidates</a>
+    </div>
+    <div class ="item">
+      <a class="btn btn-default btn-xlarge" href="http://apps.sos.ky.gov/elections/candidatefilings/statewide/default.aspx?id=11" target="_blank" role="button">KY Senate Candidates</a>
+    </div>
+    <div class ="item">
+      <a class="btn btn-default btn-xlarge" href="http://apps.sos.ky.gov/elections/candidatefilings/statewide/default.aspx?id=12" target="_blank" role="button">KY House Candidates</a>
+    </div>
+    </div>   
 
-          <a class="btn btn-default btn-xlarge" role="button" data-toggle="collapse" href="#collapse-senate" aria-expanded="false" aria-controls="collapse">View</a>
-      </div>
-      <div class="us-house">
-          <h3>U.S. House of Representatives Candidates</h3>
-
-          <a class="btn btn-default btn-xlarge" role="button" data-toggle="collapse" href="#collapse-house" aria-expanded="false" aria-controls="collapse">View</a>
-      </div>
-
-      <h3>Kentucky Senate Candidates</h3>
-
-      <a class="btn btn-default btn-xlarge" href="http://apps.sos.ky.gov/elections/candidatefilings/statewide/default.aspx?id=11" target="_blank" role="button">Go</a>
-
-      <h3>Kentucky House of Representatives Candidates</h3>
-
-      <a class="btn btn-default btn-xlarge" href="http://apps.sos.ky.gov/elections/candidatefilings/statewide/default.aspx?id=12" target="_blank" role="button">Go</a>
-
-    </div>    
-
-  	<div class="section-title contentblue flex-container2">
+  	<div class="contentblue flex-container2">
   		<a name="where"></a>
   		<h2 class ="item1">Where Do I Vote?</h2>
       <div>
