you're killin me, stylz

--- a/index.html
+++ b/index.html
@@ -34,9 +34,28 @@
     </div> 
   </div>
     </div> 
-  <div class="flex-container">
+  <div class= flex-container>
+     <div class="section-title item1">
+  		<a name="when"></a>
+  		<h2>Important Dates</h2>
+  
+  			<p>First Time Registration Deadline:</p>
+  			<p class="date">Monday, April 18, 2016</p>
   	
-    <div class="section-title contentred item3">
+            <p>Absentee Ballot Request:</p>
+            <p class="date">Tuesday, May 10, 2016</p>
+
+            <p>Absentee Ballot Return:</p>
+            <p class="date">Tuesday, May 17, 2016 by 6:00 pm</p>
+          
+  
+  			<p>Kentucky Primary Election:</p>
+  			<p class="date">Tuesday, May 17, 2016</p>
+  
+  	</div>
+ 
+  	
+    <div class="section-title contentred item1">
   		<a name="how"></a>
   		<h3>How to Register</h3>
        <div class="item panel-group" id="accordion">
@@ -93,28 +112,9 @@
 
   		
   </div>
-    <div class="section-title item2">
-  		<a name="when"></a>
-  		<h2>Important Dates</h2>
-  		<div class="item">
-  			<p>First Time Registration Deadline:</p>
-  			<p class="date">Monday, April 18, 2016</p>
-  		</div>
-        <div class="item">
-            <p>Absentee Ballot Request:</p>
-            <p class="date">Tuesday, May 10, 2016</p>
-        </div>
-    <div class="item">
-            <p>Absentee Ballot Return:</p>
-            <p class="date">Tuesday, May 17, 2016 by 6:00 pm</p>
-        </div>        
-  		<div class="item">
-  			<p>Kentucky Primary Election:</p>
-  			<p class="date">Tuesday, May 17, 2016</p>
-  		</div>
-
-  	</div>
+   
     </div>
+   
     <div id="container-fluid">
   	
   		<a name="who"></a>
@@ -152,16 +152,16 @@
       </div>
     </div> 
     <div class="flex-container">
-    <div class="us-senate item">
+    <div class="us-senate item3">
       <a class="btn btn-default btn-xlarge" role="button" data-toggle="collapse" href="#collapse-senate" aria-expanded="false" aria-controls="collapse">USA Senate Candidates</a>
     </div>
-    <div class="us-house item">
+    <div class="us-house item3">
       <a class="btn btn-default btn-xlarge" role="button" data-toggle="collapse" href="#collapse-house" aria-expanded="false" aria-controls="collapse">USA House Candidates</a>
     </div>
-    <div class ="item">
+    <div class ="item3">
       <a class="btn btn-default btn-xlarge" href="http://apps.sos.ky.gov/elections/candidatefilings/statewide/default.aspx?id=11" target="_blank" role="button">KY Senate Candidates</a>
     </div>
-    <div class ="item">
+    <div class ="item3">
       <a class="btn btn-default btn-xlarge" href="http://apps.sos.ky.gov/elections/candidatefilings/statewide/default.aspx?id=12" target="_blank" role="button">KY House Candidates</a>
     </div>
     </div>   
