--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Kentucky Primary 2016</title>
+  <title>Kentucky Primary</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="All things Kentucky Primary Election, all in one place.">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -23,15 +24,19 @@
           <h1>KY Primary</h1>
           <p>The Kentucky Primary Election, all in one place.</p>
           <div class ="item">
-      	  	<a class="btn btn-default btn-xlarge" href="#when" role="button">When</a>
-      	  	<a class="btn btn-default btn-xlarge" href="#how" role="button">How</a>
-      	  	<a class="btn btn-default btn-xlarge" href="#who" role="button">Who</a>
-      	  	<a class="btn btn-default btn-xlarge" href="#where" role="button">Where</a>
-      	  	<a class="btn btn-default btn-xlarge" href="#share" role="button">Share</a>
+      	  	<a class="btn btn-default btn-xlarge" href="#when" role="button" alt="Important Dates">When</a>
+      	  	<a class="btn btn-default btn-xlarge" href="#how" role="button" alt="How to Register">How</a>
+      	  	<a class="btn btn-default btn-xlarge" href="#who" role="button" alt="Who is Running">Who</a>
+      	  	<a class="btn btn-default btn-xlarge" href="#where" role="button" alt="Where to Vote">Where</a>
+      	  	<!--<a class="btn btn-default btn-xlarge" href="#share" role="button">Share</a>-->
     	   </div>
+         <div class="item3">
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A//www.google.com/" target="_blank"><img src="img/facebook.png" class="social" alt="share to facebook"></a>
+            <a href="https://twitter.com/home?status=https%3A//www.google.com/" target="_blank"><img src="img/twitter.png" class="social" alt="share to twitter"></a>
+          </div>
     </div>
 
-  <div class= flex-container>
+  <div class="flex-container">
      <div class="section-title item1">
   		<a name="when"></a>
       <h2>Important Dates</h2>
@@ -121,11 +126,8 @@
         </div>
     </div>
 	<p2><strong>Note:</strong> Click the question to see the answer.</p2>
-
-  		
-  </div>
-   
-    </div>
+</div>
+</div>
    
     <div id="container-fluid">
   	
@@ -173,18 +175,10 @@
 
   	<div class="contentblue flex-container2">
   		<a name="where"></a>
-  		<h2 class ="item1">Where To Vote</h2>
+  		<h2>Where to Vote</h2>
       <div>
   		<a class="btn btn-default btn-xlarge item" href="https://vrsws.sos.ky.gov/vic/" target="_blank" role="button">Where Do I Vote?</a>
   	 </div>
-      <div class="section-title item2">
-  		<a name="share"></a>
-  		<h2>Share</h2>
-
-
-        <a class="btn btn-default btn-xlarge" href="#" target="_blank" role="button">Facebook</a>
-  		<a class="btn btn-default btn-xlarge" href="#" target="_blank" role="button">Twitter</a>
-  	 </div>  
     </div>
  
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
