--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <link rel="stylesheet" href="css/animations.css">
     
     <link href='https://fonts.googleapis.com/css?family=Rozha+One|Raleway:400,100,800' rel='stylesheet' type='text/css'>
-  <!--<script type="text/javascript">var switchTo5x=true;</script>
-  <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
-  <script type="text/javascript" src="http://s.sharethis.com/loader.js"></script>-->
+  <!--<script type="text/javascript">var switchTo5x=true;</script>-->
   
 </head>
 
@@ -35,10 +33,10 @@
             <a class="btn btn-default btn-xlarge" href="#open-primary" role="button" alt="Sign the petition to open the Kentucky Primary">Petition: Open the Primary!</a>
 
     	   </div>
-         <div class="item3">
-            <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A//www.google.com/" target="_blank"><img src="img/facebook.png" class="social" alt="share to facebook"></a>
-            <a href="https://twitter.com/home?status=https%3A//www.google.com/" target="_blank"><img src="img/twitter.png" class="social" alt="share to twitter"></a>
-          </div>
+        <!--  <div class="item3">
+           <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A//www.google.com/" target="_blank"><img src="img/facebook.png" class="social" alt="share to facebook"></a>-->
+<!--            <a href="https://twitter.com/home?status=https%3A//www.google.com/" target="_blank"><img src="img/twitter.png" class="social" alt="share to twitter"></a>
+          </div>-->
     </div>
 
   <div class="flex-container2">
@@ -225,11 +223,12 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous">
   </script>
 
-  <!--<script type="text/javascript">stLight.options({publisher: "40cc4668-3df0-48af-b6bb-d681297bf2ed", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
-  <script>
-      var options={ "publisher": "40cc4668-3df0-48af-b6bb-d681297bf2ed", "position": "left", "ad": { "visible": false, "openDelay": 5, "closeDelay": 0}, "chicklets": { "items": ["facebook", "twitter", "email", "sharethis"]}};
-      var st_hover_widget = new sharethis.widgets.hoverbuttons(options);
-  </script>-->
+
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4d8b91c11369332c"></script>
+
+
+
+
   <script src="js/MetroJs.lt.js"></script>
   <script src="js/scripts.js"></script>
 
