--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Kentucky Primary TEST</title>
+  <title>Kentucky Primary</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="All things Kentucky Primary Election, all in one place.">
     <meta charset="UTF-8">
@@ -17,7 +17,7 @@
 <body>	
 
   <div class= "header flex-container2">
-          <h1>KY Primary</h1>
+          <h1>KY Primary Test</h1>
           <p>The Kentucky Primary Election, all in one place.</p>
           <div class ="item nav-buttons">
       	  	<a class="btn btn-default btn-xlarge" href="#when" role="button" alt="Important Dates">When</a>
