--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>	
 
   <div class= "header flex-container2">
-          <h1>KY Primary Test</h1>
+          <h1>KY Primary Test :)</h1>
           <p>The Kentucky Primary Election, all in one place.</p>
           <div class ="item nav-buttons">
       	  	<a class="btn btn-default btn-xlarge" href="#when" role="button" alt="Important Dates">When</a>
