Added passed class to dates/info that has passed its corresponding deadline.

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
           </div>
         </div>
         <div class="live-tile blue" id="tile3" data-mode="slide" data-stops="100%" data-stack="true">  
-          <div class="tile-date">
+          <div class="tile-date passed">
             <p>Tuesday, May 10</p>   
             <span class="tile-title">(Hover)</span>
           </div>
-          <div class="tile-detail">
+          <div class="tile-detail passed">
             <p>Absentee Ballot Request</p>            
           </div>
         </div>        
@@ -115,7 +115,7 @@
             </div>
             <div id="collapseThree" class="panel-collapse collapse">
                 <div class="panel-body">
-                  <p>Serving in the military or living outside of the United States?</p><p><a href="http://elect.ky.gov/voterinfo/militaryandoverseasvoters/Pages/VoterToolkit.aspx" target="_blank">Can I cast an Absentee Ballot?</a></p>
+                  <p class="passed">Serving in the military or living outside of the United States?</p><p>Deadline passed!</p><p><a href="http://elect.ky.gov/voterinfo/militaryandoverseasvoters/Pages/VoterToolkit.aspx" target="_blank">Can I cast an Absentee Ballot?</a></p>
                 </div>
             </div>
         </div>
@@ -127,7 +127,7 @@
             </div>
             <div id="collapseFour" class="panel-collapse collapse">
                 <div class="panel-body">
-                    <p>If you qualify, request an absentee ballot no later than Tuesday, May 10, 2016!</p><p>Return it no later than Tuesday, May 17, 2016 by 6:00pm!</p><p><a href="http://elect.ky.gov/voterinfo/militaryandoverseasvoters/Pages/FPCARegistertovote.aspx" target="_blank">Request an Absentee Ballot</a></p>
+                    <p class="passed">If you qualify, request an absentee ballot no later than Tuesday, May 10, 2016!</p><p>Deadline passed to request your absentee ballot.  If you requested one, don't forget to return it no later than Tuesday, May 17, 2016 by 6:00pm!<p><a href="http://elect.ky.gov/voterinfo/militaryandoverseasvoters/Pages/FPCARegistertovote.aspx" target="_blank">Request an Absentee Ballot</a></p>
                 </div>
             </div>
         </div>
